# simple-cocotools

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yaml  test.yaml
scripts/: benchmark.py  benchmark_mask_rcnn.py  faster_rcnn_example.py  keypoint_rcnn_example.py  mask_rcnn_example.py
simple_cocotools/: __init__.py  counts.py  detections.py  evaluator.py
simple_cocotools/utils/: coco.py  data.py
tests/: test_faster_rcnn_example.py  test_keypoint_rcnn_example.py  test_mask_rcnn_example.py
