[build-system]
requires = ["setuptools", "setuptools-scm"]

[project]
name = "simple-cocotools"
authors = [
    {name = "Frank Odom", email = "frank.odom.iii@gmail.com"},
]
description = "simple-cocotools"
license = {text = "MIT"}
dynamic = ["version", "readme"]  # NOTE: Must be in sync with [tool.setuptools.dynamic] below
dependencies = [
    "numpy>=2.0,<3",
    "scipy>=1.10.0,<2.0",
]
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools.dynamic]
# NOTE: Must be in sync with 'project.dynamic' above
version = {attr = "simple_cocotools.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["tests"]

# extra packages (e.g. pip install .[test])
[project.optional-dependencies]
pycocotools=[
    "pycocotools~=2.0.10",
]
test = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm",
    "black==25.1.0",
    "httpx==0.28.1",
    "mypy==1.15.0",
    "pre-commit==4.2.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "ruff~=0.11.0",
    "wget~=3.2.0",
]


# ----- Linting, Formatting, and Typing -----

[tool.black]
line-length = 88

[tool.mypy]
files = "simple_cocotools/"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term-missing"
filterwarnings = "ignore:.*.:DeprecationWarning"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
ignore = ["B905", "E501"]
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W"
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
[tool.ruff.lint.mccabe]
max-complexity = 18